--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -14,3 +14,18 @@
   background-color: rgb(248, 216, 164);
   padding: 0px 20px;
 }
+@media only screen and (max-width: 600px) {
+  .shop-container {
+    padding: 10px;
+    grid-template-columns: 2fr 1fr;
+  }
+  .products-container {
+    padding: 10px;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0px;
+  }
+  .summary-container {
+    background-color: rgb(248, 216, 164);
+    padding: 0px 10px;
+  }
+}
